--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "homepage": "https://github.com/hungduongg2909/NodeJsLab#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-handlebars": "^7.1.3",
     "gitignore": "^0.7.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "pug": "^3.0.3"
   }
 }
